changed color to vcr blue and added borders to videos

--- a/index.html
+++ b/index.html
@@ -43,45 +43,17 @@
             <div class="album" id="cavurn">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=2959684193/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=3552596707/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=2959684193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3552596707/transparent=true/"
                 seamless
               ></iframe>
               <h3 class="album-title">
                 cavurn - <span class="italics">rehearsal</span>
               </h3>
             </div>
-            <div class="album" id="dog-mountain">
-              <iframe
-                style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=1675612197/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=1995274628/transparent=true/"
-                seamless
-                ><a href="https://dogmountain.bandcamp.com/album/meadow"
-                  >Meadow by Dog Mountain</a
-                ></iframe
-              >
-              <h3 class="album-title">
-                dog mountain - <span class="italics">meadow</span>
-              </h3>
-            </div>
-            <div class="album" id="shadow-of-the-season">
-              <iframe
-                style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=3325821171/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=2868977026/transparent=true/"
-                seamless
-                ><a
-                  href="https://shadowoftheseason.bandcamp.com/album/shadow-of-the-season"
-                  >Shadow of the Season by shadow of the season</a
-                ></iframe
-              >
-              <h3 class="album-title">
-                shadow of the season -
-                <span class="italics">shadow of the season</span>
-              </h3>
-            </div>
             <div class="album" id="bread-pilot">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=1101615206/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=3595169866/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=1101615206/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3595169866/transparent=true/"
                 seamless
                 ><a
                   href="https://breadpilotband.bandcamp.com/album/yale-seeing-the-elephant"
@@ -93,10 +65,38 @@
                 <span class="italics">yale / seeing the elephant</span>
               </h3>
             </div>
+            <div class="album" id="shadow-of-the-season">
+              <iframe
+                style="border: 0; width: 290px; height: 290px"
+                src="https://bandcamp.com/EmbeddedPlayer/album=3325821171/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2868977026/transparent=true/"
+                seamless
+                ><a
+                  href="https://shadowoftheseason.bandcamp.com/album/shadow-of-the-season"
+                  >Shadow of the Season by shadow of the season</a
+                ></iframe
+              >
+              <h3 class="album-title">
+                shadow of the season -
+                <span class="italics">shadow of the season</span>
+              </h3>
+            </div>
+            <div class="album" id="dog-mountain">
+              <iframe
+                style="border: 0; width: 290px; height: 290px"
+                src="https://bandcamp.com/EmbeddedPlayer/album=1675612197/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=1995274628/transparent=true/"
+                seamless
+                ><a href="https://dogmountain.bandcamp.com/album/meadow"
+                  >Meadow by Dog Mountain</a
+                ></iframe
+              >
+              <h3 class="album-title">
+                dog mountain - <span class="italics">meadow</span>
+              </h3>
+            </div>
             <div class="album" id="painboys">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=2239417690/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=170939892/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=2239417690/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=170939892/transparent=true/"
                 seamless
                 ><a href="https://welovepain.bandcamp.com/album/in-agony"
                   >IN AGONY by PAINBOYS</a
@@ -110,7 +110,7 @@
             <div class="album" id="bullets-1">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=577066193/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=3425364916/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=577066193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3425364916/transparent=true/"
                 seamless
                 ><a
                   href="https://bulletsorballoons.bandcamp.com/album/hyperallergenic"
@@ -125,7 +125,7 @@
             <div class="album" id="bullets-2">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=3213683537/size=large/bgcol=333333/linkcol=e32c14/minimal=true/track=2126398400/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=3213683537/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2126398400/transparent=true/"
                 seamless
                 ><a
                   href="https://bulletsorballoons.bandcamp.com/album/patriotic-education"
@@ -140,7 +140,7 @@
             <div class="album" id="degraved">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
-                src="https://bandcamp.com/EmbeddedPlayer/album=4266171623/size=large/bgcol=ffffff/linkcol=0687f5/minimal=true/track=2713311019/transparent=true/"
+                src="https://bandcamp.com/EmbeddedPlayer/album=4266171623/size=large/bgcol=000000/linkcol=ffffff/minimal=true/track=2713311019/transparent=true/"
                 seamless
                 ><a
                   href="https://degraved.bandcamp.com/album/exhumed-remnants-2"
@@ -157,33 +157,37 @@
         <!-- Video Section  -->
         <div class="video-section">
           <h1 id="video-header">video</h1>
-          <iframe
-            id="electric-chair-video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/Vj2od7eQ07k"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <h3 class="video-title">
-            “Electric Chair LIVE at the Capitol Theatre”
-          </h3>
-          <iframe
-            id="new-day-cooperative-video"
-            width="560"
-            height="315"
-            src="https://www.youtube.com/embed/_AMQso1H6hk"
-            title="YouTube video player"
-            frameborder="0"
-            allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-            allowfullscreen
-          ></iframe>
-          <h3 class="video-title">
-            “A Storefront for New Day Cooperative Distribution” Indiegogo
-            campaign video (fully funded!)
-          </h3>
+          <div class="video">
+            <iframe
+              id="electric-chair-video"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/Vj2od7eQ07k"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <h3 class="video-title">
+              “Electric Chair LIVE at the Capitol Theatre”
+            </h3>
+          </div>
+          <div class="video">
+            <iframe
+              id="new-day-cooperative-video"
+              width="560"
+              height="315"
+              src="https://www.youtube.com/embed/_AMQso1H6hk"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
+            <h3 class="video-title">
+              “A Storefront for New Day Cooperative Distribution” Indiegogo
+              campaign video (fully funded!)
+            </h3>
+          </div>
         </div>
       </div>
     </div>
