commented out contact section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           <a href="#home" id="home-page">home</a>
           <a href="#audio" id="audio-page">audio</a>
           <a href="#video" id="video-page">video</a>
-          <a href="#contact" id="contact-page">contact</a>
+          <!-- <a href="#contact" id="contact-page">contact</a> -->
         </div>
       </div>
       <div class="main-right">
