--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 ></iframe
               >
               <h3 class="album-title">
-                bulets or balloons -
+                bullets or balloons -
                 <span class="italics">patriotic education</span>
               </h3>
             </div>
