capatilize Nick Emard

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class="main-right">
         <!-- About section -->
         <div class="about-section">
-          <h1 id="about-name">nick emard</h1>
+          <h1 id="about-name">Nick Emard</h1>
           <img
             src="./assets/nick_rectangle.jpg"
             alt="nick emard"
