added audio credit subtext and styling

--- a/index.html
+++ b/index.html
@@ -39,12 +39,14 @@
         <!-- Audio section  -->
         <div class="audio-section">
           <h1 id="audio-header">audio</h1>
+          <p class="audio-subtext">(all engineering and mixing unless otherwise noted)</p>
           <div class="album-grid">
             <div class="album" id="cavurn">
               <iframe
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=2959684193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3552596707/transparent=true/"
                 seamless
+                loading="lazy"
               ></iframe>
               <h3 class="album-title">
                 cavurn - <span class="italics">rehearsal</span>
@@ -55,6 +57,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=1101615206/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3595169866/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a
                   href="https://breadpilotband.bandcamp.com/album/yale-seeing-the-elephant"
                   >Yale / Seeing the Elephant by Bread Pilot</a
@@ -70,6 +73,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=3325821171/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2868977026/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a
                   href="https://shadowoftheseason.bandcamp.com/album/shadow-of-the-season"
                   >Shadow of the Season by shadow of the season</a
@@ -85,6 +89,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=1675612197/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=1995274628/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a href="https://dogmountain.bandcamp.com/album/meadow"
                   >Meadow by Dog Mountain</a
                 ></iframe
@@ -98,6 +103,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=2239417690/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=170939892/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a href="https://welovepain.bandcamp.com/album/in-agony"
                   >IN AGONY by PAINBOYS</a
                 ></iframe
@@ -112,6 +118,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=577066193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3425364916/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a
                   href="https://bulletsorballoons.bandcamp.com/album/hyperallergenic"
                   >Hyperallergenic by Bullets or Balloons</a
@@ -127,6 +134,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=3213683537/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2126398400/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a
                   href="https://bulletsorballoons.bandcamp.com/album/patriotic-education"
                   >Patriotic Education by Bullets or Balloons</a
@@ -142,6 +150,7 @@
                 style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=4266171623/size=large/bgcol=000000/linkcol=ffffff/minimal=true/track=2713311019/transparent=true/"
                 seamless
+                loading="lazy"
                 ><a
                   href="https://degraved.bandcamp.com/album/exhumed-remnants-2"
                   >Exhumed Remnants by Degraved</a
@@ -167,6 +176,7 @@
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
+              loading="lazy"
             ></iframe>
             <h3 class="video-title">
               “Electric Chair LIVE at the Capitol Theatre”
@@ -182,6 +192,7 @@
               frameborder="0"
               allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
               allowfullscreen
+              loading="lazy"
             ></iframe>
             <h3 class="video-title">
               “A Storefront for New Day Cooperative Distribution” Indiegogo
