--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
     <div class="site-content">
       <div class="main-left">
         <div class="nav-links">
-          <a href="#home" id="home-page">home</a>
-          <a href="#audio" id="audio-page">audio</a>
-          <a href="#video" id="video-page">video</a>
-          <!-- <a href="#contact" id="contact-page">contact</a> -->
+          <a href="#home" id="home-page">HOME</a>
+          <a href="#audio" id="audio-page">AUDIO</a>
+          <a href="#video" id="video-page">VIDEO</a>
+          <a href="#contact" id="contact-page">CONTACT</a>
         </div>
       </div>
       <div class="main-right">
         <!-- About section -->
         <div class="about-section">
-          <h1 id="about-name">Nick Emard</h1>
+          <h1 id="about-name">NICK EMARD</h1>
           <img
             src="./assets/nick_rectangle.jpg"
             alt="nick emard"
@@ -38,12 +38,13 @@
         </div>
         <!-- Audio section  -->
         <div class="audio-section">
-          <h1 id="audio-header">audio</h1>
-          <p class="audio-subtext">(all engineering and mixing unless otherwise noted)</p>
+          <h1 id="audio-header">AUDIO</h1>
+          <p class="audio-subtext">
+            (all engineering and mixing unless otherwise noted)
+          </p>
           <div class="album-grid">
             <div class="album" id="cavurn">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=2959684193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3552596707/transparent=true/"
                 seamless
                 loading="lazy"
@@ -54,7 +55,6 @@
             </div>
             <div class="album" id="bread-pilot">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=1101615206/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3595169866/transparent=true/"
                 seamless
                 loading="lazy"
@@ -70,7 +70,6 @@
             </div>
             <div class="album" id="shadow-of-the-season">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=3325821171/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2868977026/transparent=true/"
                 seamless
                 loading="lazy"
@@ -86,7 +85,6 @@
             </div>
             <div class="album" id="dog-mountain">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=1675612197/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=1995274628/transparent=true/"
                 seamless
                 loading="lazy"
@@ -100,7 +98,6 @@
             </div>
             <div class="album" id="painboys">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=2239417690/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=170939892/transparent=true/"
                 seamless
                 loading="lazy"
@@ -115,7 +112,6 @@
             </div>
             <div class="album" id="bullets-1">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=577066193/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=3425364916/transparent=true/"
                 seamless
                 loading="lazy"
@@ -131,7 +127,6 @@
             </div>
             <div class="album" id="bullets-2">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=3213683537/size=large/bgcol=333333/linkcol=ffffff/minimal=true/track=2126398400/transparent=true/"
                 seamless
                 loading="lazy"
@@ -147,7 +142,6 @@
             </div>
             <div class="album" id="degraved">
               <iframe
-                style="border: 0; width: 290px; height: 290px"
                 src="https://bandcamp.com/EmbeddedPlayer/album=4266171623/size=large/bgcol=000000/linkcol=ffffff/minimal=true/track=2713311019/transparent=true/"
                 seamless
                 loading="lazy"
@@ -165,7 +159,7 @@
         </div>
         <!-- Video Section  -->
         <div class="video-section">
-          <h1 id="video-header">video</h1>
+          <h1 id="video-header">VIDEO</h1>
           <div class="video">
             <iframe
               id="electric-chair-video"
@@ -198,6 +192,47 @@
               “A Storefront for New Day Cooperative Distribution” Indiegogo
               campaign video (fully funded!)
             </h3>
+          </div>
+        </div>
+        <!-- Contact Section -->
+        <div class="contact-section">
+          <div class="contact-header-container">
+            <h1 id="contact-header">CONTACT</h1>
+          </div>
+          <div class="contact-main">
+            <p class="contact-subtext">
+              Shoot me a message and I will get back to you within a business
+              day. Hate my contact form? Just email me at
+              <a href="mailto:nickemard6@gmail.com">nickemard6@gmail.com</a>.
+            </p>
+            <div class="contact-form-container">
+              <form
+                id="contact-form"
+                action="https://formsubmit.co/nickemard6@gmail.com"
+                method="POST"
+              >
+                <input type="hidden" name="_captcha" value="false" />
+                <input type="hidden" name="_subject" value="New Inquiry!" />
+                <h2>NAME</h2>
+                <input type="text" name="name" autocomplete="off" required />
+                <h2>EMAIL</h2>
+                <input type="email" name="email" autocomplete="off" required />
+                <input
+                  type="hidden"
+                  name="_next"
+                  value="https://nickemard.com/thankyou"
+                />
+                <h2>MESSAGE</h2>
+                <textarea
+                  type="text"
+                  name="message"
+                  rows="4"
+                  autocomplete="off"
+                  required
+                ></textarea>
+                <button type="submit">SEND</button>
+              </form>
+            </div>
           </div>
         </div>
       </div>
