fixed edits of font and about content

--- a/index.html
+++ b/index.html
@@ -21,18 +21,25 @@
         <!-- About section -->
         <div class="about-section">
           <h1 id="about-name">NICK EMARD</h1>
-          <img
-            src="./assets/nick_rectangle.jpg"
-            alt="nick emard"
-            id="main-img"
-          />
+          <figure>
+            <img
+              src="./assets/nick_rectangle.jpg"
+              alt="nick emard"
+              id="main-img"
+            />
+            <figcaption>Photo by Cody Madison</figcaption>
+          </figure>
+
           <p class="about-content">
             I am an audio engineer, video editor and musician. I was born and
             raised in likely one of the most fantastic areas of the world, the
             Pacific Northwest, and currently based out of Seattle. I studied
             Community Arts & Music with a minor in Audio Engineering & Society
-            at Fairhaven College in Bellingham, WA. I work at 7 Hills Studio and
-            my on-the-go mobile recording setup called Deadpan Audio. Get in
+            at Fairhaven College in Bellingham, WA and graduated in 2015. Since
+            moving to Seattle in 2018, I have been working on recordings with my
+            on-the-go mobile recording studio Deadpan Audio as well as a number
+            of professional recording studios in the area. I also take on video
+            productions of varying sizes on a project-by-project basis. Get in
             touch, I would love to be a part of your next project!
           </p>
         </div>
@@ -50,7 +57,7 @@
                 loading="lazy"
               ></iframe>
               <h3 class="album-title">
-                cavurn - <span class="italics">rehearsal</span>
+                Cavurn - <span class="italics">Rehearsal</span>
               </h3>
             </div>
             <div class="album" id="bread-pilot">
@@ -64,8 +71,8 @@
                 ></iframe
               >
               <h3 class="album-title">
-                bread pilot -
-                <span class="italics">yale / seeing the elephant</span>
+                Bread Pilot -
+                <span class="italics">Yale / Seeing the Elephant</span>
               </h3>
             </div>
             <div class="album" id="shadow-of-the-season">
@@ -75,12 +82,12 @@
                 loading="lazy"
                 ><a
                   href="https://shadowoftheseason.bandcamp.com/album/shadow-of-the-season"
-                  >Shadow of the Season by shadow of the season</a
+                  >Shadow of the Season by Shadow of the Season</a
                 ></iframe
               >
               <h3 class="album-title">
-                shadow of the season -
-                <span class="italics">shadow of the season</span>
+                Shadow of the Season -
+                <span class="italics">Shadow of the Season</span>
               </h3>
             </div>
             <div class="album" id="dog-mountain">
@@ -93,7 +100,7 @@
                 ></iframe
               >
               <h3 class="album-title">
-                dog mountain - <span class="italics">meadow</span>
+                Dog Mountain - <span class="italics">Meadow</span>
               </h3>
             </div>
             <div class="album" id="painboys">
@@ -106,8 +113,8 @@
                 ></iframe
               >
               <h3 class="album-title">
-                painboys -
-                <span class="italics">in agony</span>
+                Painboys -
+                <span class="italics">In Agony</span>
               </h3>
             </div>
             <div class="album" id="bullets-1">
@@ -121,8 +128,8 @@
                 ></iframe
               >
               <h3 class="album-title">
-                bullets or balloons -
-                <span class="italics">hyperallergenic</span>
+                Bullets or Balloons -
+                <span class="italics">Hyperallergenic</span>
               </h3>
             </div>
             <div class="album" id="bullets-2">
@@ -136,8 +143,8 @@
                 ></iframe
               >
               <h3 class="album-title">
-                bullets or balloons -
-                <span class="italics">patriotic education</span>
+                Bullets or Balloons -
+                <span class="italics">Patriotic Education</span>
               </h3>
             </div>
             <div class="album" id="degraved">
@@ -151,8 +158,8 @@
                 ></iframe
               >
               <h3 class="album-title">
-                degraved -
-                <span class="italics">exhumed remnants</span>
+                Degraved -
+                <span class="italics">Exhumed Remnants</span>
               </h3>
             </div>
           </div>
