--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   </head>
   <body class="site-container">
     <div class="site-content">
+      <div class="header-section">
+        <div class="logo-container">
+          <img src="./assets/logo.jpg" alt="logo" class="logo" />
+        </div>
+      </div>
       <div class="main-left">
         <div class="nav-links">
           <a href="#home" id="home-page">HOME</a>
@@ -20,7 +25,7 @@
       <div class="main-right">
         <!-- About section -->
         <div class="about-section">
-          <h1 id="about-name">NICK EMARD</h1>
+          <!-- <h1 id="about-name">NICK EMARD</h1> -->
           <figure>
             <img
               src="./assets/nick_rectangle.jpg"
