--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
             touch, I would love to be a part of your next project!
           </p>
         </div>
+        <!-- Divider Section  -->
+        <div class="divider-section"></div>
         <!-- Audio section  -->
         <div class="audio-section">
           <h1 id="audio-header">AUDIO</h1>
@@ -169,6 +171,8 @@
             </div>
           </div>
         </div>
+        <!-- Divider Section  -->
+        <div class="divider-section"></div>
         <!-- Video Section  -->
         <div class="video-section">
           <h1 id="video-header">VIDEO</h1>
@@ -206,6 +210,8 @@
             </h3>
           </div>
         </div>
+        <!-- Divider Section -->
+        <div class="divider-section"></div>
         <!-- Contact Section -->
         <div class="contact-section">
           <div class="contact-header-container">
@@ -222,13 +228,29 @@
                 id="contact-form"
                 action="https://formsubmit.co/nickemard6@gmail.com"
                 method="POST"
+                autocomplete="off"
               >
-                <input type="hidden" name="_captcha" value="false" />
-                <input type="hidden" name="_subject" value="New Inquiry!" />
+                <input
+                  type="hidden"
+                  name="_captcha"
+                  value="false"
+                  autocomplete="off"
+                />
+                <input
+                  type="hidden"
+                  name="_subject"
+                  value="New Inquiry!"
+                  autocomplete="off"
+                />
                 <h2>NAME</h2>
                 <input type="text" name="name" autocomplete="off" required />
                 <h2>EMAIL</h2>
-                <input type="email" name="email" autocomplete="off" required />
+                <input
+                  type="email"
+                  name="email"
+                  autocomplete="off"
+                  required
+                />
                 <input
                   type="hidden"
                   name="_next"
@@ -247,6 +269,8 @@
             </div>
           </div>
         </div>
+        <!-- Divider Section -->
+        <div class="divider-section"></div>
       </div>
     </div>
     <script src="app.js"></script>
