updated fonts and spacing

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nick Emard || Audio & Video</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="shortcut icon"
+      type="image/jpg"
+      href="./assets/nick-emard-favicon.png"
+    />
   </head>
   <body class="site-container">
     <div class="site-content">
@@ -245,12 +250,7 @@
                 <h2>NAME</h2>
                 <input type="text" name="name" autocomplete="off" required />
                 <h2>EMAIL</h2>
-                <input
-                  type="email"
-                  name="email"
-                  autocomplete="off"
-                  required
-                />
+                <input type="email" name="email" autocomplete="off" required />
                 <input
                   type="hidden"
                   name="_next"
