--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
       type="image/jpg"
       href="./assets/nick-emard-favicon.png"
     />
-    <script
-      defer
-      src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"
-    ></script>
+    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
   </head>
   <body class="site-container">
     <div class="site-content">
