--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0,
+    maximum-scale=1, minimum-scale=1" />
     <title>Nick Emard || Audio & Video</title>
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -11,7 +12,7 @@
       type="image/jpg"
       href="./assets/nick-emard-favicon.png"
     />
-    <script defer src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
+    <script src="https://unpkg.com/smoothscroll-polyfill@0.4.4/dist/smoothscroll.min.js"></script>
   </head>
   <body class="site-container">
     <div class="site-content">
